testing fixes [update] text overflow solved [update] migrated logOut logic to redux [update] cheking the open/close state check of modal in itself [update] checking that if jwt was expired navigate the user to login form

--- a/src/pages/Card.css
+++ b/src/pages/Card.css
@@ -64,6 +64,14 @@ html,body{
 }
 .tasklead{
   font-size:medium;
+  overflow: auto;
+}
+.clearfix{
+  overflow-wrap:normal;
+  overflow: auto;
+  text-overflow:clip;
+  word-wrap:normal;
+  word-break: break-all;
 }
 .taskdate{
   font-size:small;
